--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "llama-cpp-python>=0.3.2",
     "optimum[nncf,openvino]>=1.25",
     "pymupdf>=1.26.4",
+    "pypdf2>=3.0.1",
     "python-dotenv>=1.1.1",
     "sentence-transformers>=5.1.1",
     "streamlit>=1.50.0",
